fixing swagger rule and adding swagger seller controller
